extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=79edc9d7ee38bb5b38d1
+github.client.secret=802775df3c2ce82fc94913194678a6477a29f40d
+github.redirect.uri=http://localhost:8887/callback
