--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ server.port=8887
 github.client.id=79edc9d7ee38bb5b38d1
 github.client.secret=802775df3c2ce82fc94913194678a6477a29f40d
 github.redirect.uri=http://localhost:8887/callback
+
+#mysql
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/community?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
