--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/community?useUnicode=true&char
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#flyway
+spring.flyway.baseline-on-migrate=true
