--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <artifactId>flyway-core</artifactId>
             <version>6.5.7</version>
         </dependency>
+
+        <!--Lombok依赖-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
