--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #flyway
 spring.flyway.baseline-on-migrate=true
+
+mybatis.configuration.map-underscore-to-camel-case=true
